--- a/css/style.css
+++ b/css/style.css
@@ -897,9 +897,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 
 #footer {
-    background: #111;
+    background: #02B290;
     padding: 30px 0;
-    color: #fff;
+    color: #1C8D73;
 }
 
 #footer .copyright {
